[package]
name = "bitcoind-test-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin_hashes = "0.14.0"
bitcoin = { version = "0.32.0", features = [
    "serde",
    "rand-std",
], default-features = false }
bip324 = { version = "0.4.0", default-features = true, features = ["async"] }
tokio = { version = "1.37", default-features = false, features = [
    "rt-multi-thread",
    "sync",
    "time",
    "io-util",
    "net",
    "macros",
] }
tokio-util = { version = "0.7.12", features = ["compat"] }
# tracing = "0.1"
# tracing-subscriber = "0.3"

[lib]
name = "bitcoind_test_framework"
path = "src/lib.rs"
